--- a/calculator.html
+++ b/calculator.html
@@ -14,9 +14,9 @@
 <body>
   <div class="container-fluid">
     <div class="row firstRow">
-  <div class="col-md-4 col-sm-3 col-xs-1 border">
+  <div class="col-md-4 col-sm-3 col-xs-1 ">
 </div>
-<div class="col-md-4 text-center col-sm-6 col-xs-10 border">
+<div class="col-md-4 text-center col-sm-6 col-xs-10 ">
 
 
   <div class="row">
